the issues related to additional 8th criterion, inline-block vertical alignment have been fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ input[type="checkbox"].visually-hidden {
   font-size: 18px;
   line-height: 24px;
   font-family: inherit;
+  vertical-align: center;
   color: #ffffff;
   text-decoration: none;
 
@@ -229,6 +230,7 @@ input[type="checkbox"].visually-hidden {
   padding-bottom: 3px;
 
   line-height: 18px;
+  vertical-align: center;
 
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
@@ -396,6 +398,7 @@ input[type="checkbox"].visually-hidden {
   font-size: 14px;
   line-height: 16px;
   font-family: inherit;
+  vertical-align: center;
   color: #ffffff;
 
   background-color: rgba(255, 255, 255, 0.2);
@@ -442,6 +445,8 @@ input[type="checkbox"].visually-hidden {
   display: inline-block;
   width: 17px;
   height: 17px;
+
+  vertical-align: center;
 }
 
 .search-form .user-nav-btn:hover::before,
@@ -666,6 +671,8 @@ input[type="checkbox"].visually-hidden {
   width: 21px;
   height: 21px;
   margin-right: 8px;
+
+  vertical-align: center;
 
   border: 2px solid #ffffff;
   border-radius: 50%;
@@ -1220,6 +1227,8 @@ input[type="checkbox"].visually-hidden {
   width: 11px;
   height: 11px;
 
+  vertical-align: center;
+
   border-radius: 50%;
 }
 
@@ -1280,6 +1289,8 @@ input[type="checkbox"].visually-hidden {
 
   display: inline-block;
   padding: 0 6px 0 8px;
+
+  vertical-align: center;
 }
 
 .breadcrumbs a[href] {
@@ -1418,6 +1429,7 @@ input[type="checkbox"].visually-hidden {
   padding: 0;
 
   font: inherit;
+  vertical-align: center;
   color: inherit;
 
   background: transparent;
@@ -1847,6 +1859,8 @@ input[type="checkbox"].visually-hidden {
   width: 35px;
   height: 35px;
   padding: 9px;
+
+  vertical-align: center;
 
   border-radius: 50%;
 }
